:wrench: chore(Prettier): Initial setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,6 @@
-{}
+{
+  // Prettier
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "prettier.configPath": "./config/.prettierrc.js",
+  "prettier.ignorePath": "./config/.prettierignore",
+}
