:wrench: chore(commitlint): Initial setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,8 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "prettier.configPath": "./config/.prettierrc.js",
   "prettier.ignorePath": "./config/.prettierignore",
+  // Commitlint
+  "commitlint.config.file": "./config/.commitlintrc.js",
+  // Gitmoji
+  "gitmoji.outputType": "code",
 }
