--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,5 +2,7 @@
   "recommendations": [
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
+    "vtrois.gitmoji-vscode",
+    "joshbolduc.commitlint"
   ]
 }
