--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "fix": "prettier --config \"./config/.prettierrc.js\" --ignore-path \"./config/.prettierignore\" --write",
     "fix:css": "pnpm lint:css --- --fix \"./**/*.css\" && pnpm fix \"./**/*.css\"",
     "fix:js": "pnpm lint:js --- --fix \"./**/*.js\" && pnpm fix \"./**/*.js\"",
+    "fix:md": "pnpm lint:md --- --fix \"./**/*.md\" && pnpm fix \"./**/*.md\"",
     "lint:commits": "commitlint --config \"./config/.commitlintrc.js\" --from \"develop\" --to \"HEAD\"",
     "lint:css": "stylelint --config \"./config/.stylelintrc.js\" --ignore-path \"./config/.stylelintignore\"",
     "lint:js": "eslint --config \"./config/.eslintrc.js\" --ignore-path \"./config/.eslintignore\" --ext \".js\"",
+    "lint:md": "markdownlint --config \"./config/.markdownlint.json\" --ignore-path \"./config/.markdownlintignore\"",
     "postinstall": "husky install \"config/.husky\""
   },
   "devDependencies": {
@@ -36,6 +38,8 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-security": "^1.4.0",
     "husky": "^5.1.1",
+    "markdownlint": "^0.23.1",
+    "markdownlint-cli": "^0.26.0",
     "prettier": "^2.2.1",
     "stylelint": "^13.11.0",
     "stylelint-8-point-grid": "^1.0.0",
