--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "postinstall": "husky install \"config/.husky\""
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.0",
+    "@babel/preset-env": "^7.13.0",
     "commitlint": "^11.0.0",
     "commitlint-config-gitmoji": "^2.2.1",
     "eslint": "^7.20.0",
