:wrench: chore(Svelte): Initial setup

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "stylelint.vscode-stylelint",
     "davidanson.vscode-markdownlint",
     "shd101wyy.markdown-preview-enhanced",
-    "yzhang.markdown-all-in-one"
+    "yzhang.markdown-all-in-one",
+    "svelte.svelte-vscode"
   ]
 }
