--- a/package.json
+++ b/package.json
@@ -24,17 +24,20 @@
     "fix:css": "pnpm lint:css --- --fix \"./**/*.css\" && pnpm fix \"./**/*.css\"",
     "fix:js": "pnpm lint:js --- --fix \"./**/*.js\" && pnpm fix \"./**/*.js\"",
     "fix:md": "pnpm lint:md --- --fix \"./**/*.md\" && pnpm fix \"./**/*.md\"",
+    "fix:svelte": "pnpm lint:svelte --- --fix \"./**/*.svelte\" && pnpm fix \"./**/*.svelte\"",
     "lint:commits": "commitlint --config \"./config/.commitlintrc.js\" --from \"develop\" --to \"HEAD\"",
     "lint:css": "stylelint --config \"./config/.stylelintrc.js\" --ignore-path \"./config/.stylelintignore\"",
     "lint:js": "eslint --config \"./config/.eslintrc.js\" --ignore-path \"./config/.eslintignore\" --ext \".js\"",
     "lint:md": "markdownlint --config \"./config/.markdownlint.json\" --ignore-path \"./config/.markdownlintignore\"",
+    "lint:svelte": "eslint --config \"./config/.eslintrc.js\" --ignore-path \"./config/.eslintignore\" --ext \".svelte\"",
     "lint:staged": "lint-staged --config \"./config/.lintstagedrc.js\" --verbose",
     "postinstall": "husky install \"config/.husky\""
   },
   "devDependencies": {
     "@babel/cli": "^7.13.0",
-    "@babel/core": "^7.13.0",
+    "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.0",
+    "@snowpack/plugin-svelte": "^3.5.2",
     "commitlint": "^11.0.0",
     "commitlint-config-gitmoji": "^2.2.1",
     "eslint": "^7.20.0",
@@ -43,11 +46,13 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-svelte3": "^3.1.1",
     "husky": "^5.1.1",
     "lint-staged": "^10.5.4",
     "markdownlint": "^0.23.1",
     "markdownlint-cli": "^0.26.0",
     "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.1.6",
     "snowpack": "^3.0.12",
     "stylelint": "^13.11.0",
     "stylelint-8-point-grid": "^1.0.0",
@@ -55,5 +60,8 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-declaration-use-variable": "^1.7.2"
+  },
+  "dependencies": {
+    "svelte": "^3.32.3"
   }
 }
