--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "lint:staged": "lint-staged --config \"./config/.lintstagedrc.js\" --verbose",
     "postinstall": "husky install \"config/.husky\""
   },
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.13.0",
     "@babel/core": "^7.13.1",
