--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/cli": "^7.13.0",
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.8",
+    "@snowpack/plugin-postcss": "^1.1.0",
     "@snowpack/plugin-svelte": "^3.5.2",
     "commitlint": "^12.0.1",
     "commitlint-config-gitmoji": "^2.2.2",
@@ -54,6 +55,10 @@
     "lint-staged": "^10.5.4",
     "markdownlint": "^0.23.1",
     "markdownlint-cli": "^0.26.0",
+    "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
+    "postcss-nesting": "^7.0.1",
+    "postcss-url": "^10.1.1",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.6",
     "snowpack": "^3.0.13",
