--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.8",
     "@snowpack/plugin-postcss": "^1.1.0",
+    "@snowpack/plugin-run-script": "^2.3.0",
     "@snowpack/plugin-svelte": "^3.5.2",
     "commitlint": "^12.0.1",
     "commitlint-config-gitmoji": "^2.2.2",
