:see_no_evil: chore(Git): Ignore build output

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,6 @@ dist
 # Snowpack certification files for enabling HTTPS in development
 snowpack.crt
 snowpack.key
+
+# Build output from Snowpack
+build/
