:wrench: chore(Svelte): Better integration with editors

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,8 @@
     "davidanson.vscode-markdownlint",
     "shd101wyy.markdown-preview-enhanced",
     "yzhang.markdown-all-in-one",
-    "svelte.svelte-vscode"
+    "svelte.svelte-vscode",
+    "ardenivanov.svelte-intellisense",
+    "fivethree.vscode-svelte-snippets"
   ]
 }
