--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "commitlint-config-gitmoji": "^2.2.2",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-import-resolver-custom-alias": "^1.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
