:wrench: chore(ESLint): Aligning settings for Svelte

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,10 @@
     "configFile": "./config/.eslintrc.js",
     "ignorePath": "./config/.eslintignore"
   },
+  "eslint.validate": [
+    "javascript",
+    "svelte",
+  ],
   // Stylelint
   "stylelint.config": {
     "extends": "./config/.stylelintrc.js",
