--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack  build",
-    "build:icons": "svgstore -o \"./public/assets/images/icons.svg\" \"./source/icons/*.svg\"",
     "check": "prettier --config \"./config/.prettierrc.js\" --ignore-path \"./config/.prettierignore\" --check",
     "fix": "prettier --config \"./config/.prettierrc.js\" --ignore-path \"./config/.prettierignore\" --write",
     "fix:css": "pnpm lint:css --- --fix \"./**/*.css\" && pnpm fix \"./**/*.css\"",
@@ -72,9 +71,9 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-declaration-use-variable": "^1.7.2",
     "svelte": "^3.35.0",
+    "svelte-inline-svg": "^1.0.7",
     "svelte-preprocess": "^4.6.9",
-    "svelte-routing": "^1.5.0",
-    "svgstore-cli": "^2.0.0"
+    "svelte-routing": "^1.5.0"
   },
   "dependencies": {
     "@xeho91/avatar": "github:xeho91/avatar#main",
