--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "snowpack dev",
     "build": "snowpack build",
     "check": "prettier --config \"./config/.prettierrc.js\" --ignore-path \"./config/.prettierignore\" --check",
+    "commit": "gacp --no-add",
     "fix": "prettier --config \"./config/.prettierrc.js\" --ignore-path \"./config/.prettierignore\" --write",
     "fix:css": "pnpm lint:css --- --fix \"./**/*.css\" && pnpm fix \"./**/*.css\"",
     "fix:js": "pnpm lint:js --- --fix \"./**/*.js\" && pnpm fix \"./**/*.js\"",
@@ -40,11 +41,11 @@
     "@babel/cli": "^7.13.0",
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.9",
+    "@commitlint/config-conventional": "^12.0.1",
     "@snowpack/plugin-postcss": "^1.1.0",
     "@snowpack/plugin-run-script": "^2.3.0",
     "@snowpack/plugin-svelte": "^3.5.2",
     "commitlint": "^12.0.1",
-    "commitlint-config-gitmoji": "^2.2.3",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-custom-alias": "^1.2.0",
@@ -53,6 +54,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-svelte3": "^3.1.2",
+    "gacp": "^2.10.2",
     "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
     "markdownlint": "^0.23.1",
