chore: :hammer: Improve scripts with npm-run-all

--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "check": "prettier --check --plugin-search-dir \".\"",
     "commit": "gacp --no-add",
     "fix": "prettier --write --plugin-search-dir \".\"",
-    "fix:css": "pnpm lint:css --- --fix \"./**/*.css\" && pnpm fix \"./**/*.css\"",
-    "fix:js": "pnpm lint:js --- --fix \"./**/*.js\" && pnpm fix \"./**/*.js\"",
-    "fix:md": "pnpm lint:md --- --fix \"./**/*.md\" && pnpm fix \"./**/*.md\"",
-    "fix:svelte": "pnpm lint:svelte --- --fix \"./**/*.svelte\" && pnpm fix \"./**/*.svelte\"",
+    "fix:css": "run-s \"lint:css -- --fix ./**/*.css\" \"fix ./**/*.css\"",
+    "fix:js": "run-s \"lint:js -- --fix ./**/*.js\" \"fix ./**/*.js\"",
+    "fix:md": "run-s \"lint:md -- --fix ./**/*.md\" \"fix ./**/*.md\"",
+    "fix:svelte": "run-s \"lint:svelte -- --fix ./**/*.md\" \"fix ./**/*.svelte\"",
     "lint:commits": "commitlint --from \"develop\" --to \"HEAD\"",
     "lint:css": "stylelint",
     "lint:js": "eslint --ext \".js\"",
@@ -56,6 +56,7 @@
     "lint-staged": "^10.5.4",
     "markdownlint": "^0.23.1",
     "markdownlint-cli": "^0.27.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.2.8",
     "postcss-cli": "^8.3.1",
     "postcss-preset-env": "^6.7.0",
