--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fix:svelte": "run-s \"lint:svelte -- --fix ./**/*.md\" \"fix ./**/*.svelte\"",
     "lint:commits": "commitlint --from \"develop\" --to \"HEAD\"",
     "lint:css": "stylelint",
+    "lint:ls": "ls-lint",
     "lint:js": "eslint --ext \".js\"",
     "lint:md": "markdownlint",
     "lint:svelte": "eslint --ext \".svelte\" && stylelint",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^12.0.1",
+    "@ls-lint/ls-lint": "^1.9.2",
     "@roxi/routify": "^2.16.0",
     "@svitejs/vite-plugin-svelte": "^0.11.1",
     "commitlint": "^12.0.1",
