chore(VS Code): :wrench: Enable linting in svelte files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,4 +8,10 @@
     "javascript",
     "svelte",
   ],
+  // Stylelint
+  "stylelint.validate": [
+    "css",
+    "postcss",
+    "svelte",
+  ],
 }
