build(https): :wrench: Configured for dev server

--- a/.gitignore
+++ b/.gitignore
@@ -116,8 +116,8 @@ dist
 .pnp.*
 
 # Files for enabling HTTPS in development
-cert.pem
-key.pem
+server.cert
+server.key
 
 # Build output from Vite
 build/
