--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "@iconify-icons/simple-icons": "^1.1.16",
     "@iconify/svelte": "^1.0.4",
     "@ls-lint/ls-lint": "^1.9.2",
-    "@roxi/routify": "^2.16.0",
-    "@svitejs/vite-plugin-svelte": "^0.11.1",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.5",
     "autoprefixer": "^10.2.5",
     "commitlint": "^12.0.1",
     "eslint": "^7.22.0",
