--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "build": "routify --single-build && vite build",
     "check": "prettier --check --plugin-search-dir \".\"",
     "commit": "gacp --no-add",
+    "copy-assets": "run-p copy:*",
+    "copy:favicon": "node \"./scripts/copyAssets.js\" favicon",
+    "copy:logo": "node \"./scripts/copyAssets.js\" logo",
+    "copy:fonts": "node \"./scripts/copyAssets.js\" fonts",
     "dev": "run-p dev:*",
     "dev:routify": "routify",
     "dev:vite": "vite",
@@ -57,6 +61,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-svelte3": "^3.1.2",
+    "fs-extra": "^9.1.0",
     "gacp": "^2.10.2",
     "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
