--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
   "name": "personal-website",
-  "version": "0.1.0",
   "description": "xeho91's personal website project.",
   "keywords": [
     "personal",
     "website"
   ],
-  "homepage": "https://xeho91.site/",
-  "bugs": {
-    "url": "https://github.com/xeho91/personal-wesbite/issues"
-  },
+  "version": "0.0.0",
   "license": "SEE LICENSE IN LICENSE",
   "author": "xeho91 <xeho91@pm.me> (https://xeho91.site/)",
+  "homepage": "https://xeho91.site/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xeho91/personal-wesbite.git"
   },
+  "bugs": {
+    "url": "https://github.com/xeho91/personal-wesbite/issues"
+  },
   "scripts": {
-    "start": "vite preview",
     "build": "routify --single-build && vite build",
     "check": "prettier --check --plugin-search-dir \".\"",
     "commit": "gacp --no-add",
@@ -40,20 +39,20 @@
     "lint:md": "markdownlint",
     "lint:svelte": "eslint --ext \".svelte\" && stylelint",
     "lint:staged": "lint-staged --verbose",
+    "start": "vite preview",
     "postinstall": "husky install"
   },
   "engines": {
     "node": ">=14.0.0"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^12.0.1",
-    "@iconify-icons/simple-icons": "^1.1.16",
-    "@iconify/svelte": "^1.0.4",
+    "@commitlint/config-conventional": "^12.1.1",
     "@ls-lint/ls-lint": "^1.9.2",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.5",
+    "@roxi/routify": "^2.15.1",
+    "@sveltejs/vite-plugin-svelte": "1.0.0-next.6",
     "autoprefixer": "^10.2.5",
-    "commitlint": "^12.0.1",
-    "eslint": "^7.22.0",
+    "commitlint": "^12.1.1",
+    "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-custom-alias": "^1.2.0",
     "eslint-plugin-import": "^2.22.1",
@@ -68,7 +67,7 @@
     "markdownlint": "^0.23.1",
     "markdownlint-cli": "^0.27.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.8",
+    "postcss": "^8.2.9",
     "postcss-cli": "^8.3.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
@@ -79,17 +78,21 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-declaration-use-variable": "^1.7.2",
-    "svelte": "^3.35.0",
-    "svelte-inline-svg": "^1.0.8",
-    "svelte-preprocess": "^4.6.9",
-    "vite": "^2.1.2",
+    "svelte": "^3.37.0",
+    "svelte-preprocess": "^4.7.0",
+    "vite": "^2.1.5",
     "vite-aliases": "^0.5.1"
   },
   "dependencies": {
+    "@iconify-icons/carbon": "^1.1.3",
+    "@iconify-icons/simple-icons": "^1.1.19",
+    "@iconify-icons/twemoji": "^1.1.1",
+    "@iconify/svelte": "^1.0.4",
     "@xeho91/avatar": "github:xeho91/avatar#main",
     "@xeho91/colors": "github:xeho91/colors#main",
     "@xeho91/fonts": "github:xeho91/fonts#main",
     "@xeho91/logo": "github:xeho91/logo#main",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "svelte-inline-svg": "^1.0.8"
   }
 }
