--- a/package.json
+++ b/package.json
@@ -66,12 +66,15 @@
     "lint-staged": "^10.5.4",
     "markdownlint": "^0.23.1",
     "markdownlint-cli": "^0.27.1",
+    "mdsvex": "^0.9.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.9",
     "postcss-cli": "^8.3.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
+    "remark-autolink-headings": "^6.0.1",
+    "remark-slug": "^6.0.0",
     "stylelint": "^13.12.0",
     "stylelint-8-point-grid": "^1.0.0",
     "stylelint-a11y": "^1.2.3",
