--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "@ls-lint/ls-lint": "^1.9.2",
     "@sveltejs/adapter-node": "next",
     "@sveltejs/kit": "next",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "autoprefixer": "^10.2.5",
     "commitlint": "^12.1.1",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-import-resolver-custom-alias": "^1.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-svelte3": "^3.1.2",
