--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "stylelint-a11y": "^1.2.3",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended": "^5.0.0",
     "stylelint-declaration-use-variable": "^1.7.2",
     "svelte": "^3.38.2",
     "svelte-inline-svg": "^1.0.8",
