--- a/package.json
+++ b/package.json
@@ -61,9 +61,12 @@
     "markdownlint-cli": "^0.27.1",
     "mdsvex": "^0.9.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.9",
+    "postcss": "^8.2.14",
     "postcss-cli": "^8.3.1",
+    "postcss-mixins": "^7.0.3",
     "postcss-preset-env": "^6.7.0",
+    "postcss-reporter": "^7.0.2",
+    "postcss-size": "^4.0.1",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "remark-autolink-headings": "^6.0.1",
