build(ls-lint): 🔧 pages -> routes & support private

--- a/.ls-lint.yml
+++ b/.ls-lint.yml
@@ -5,8 +5,8 @@ ls:
     .html: kebab-case
     .svelte: PascalCase
 
-    pages:
-        .svelte: kebab-case | regex:^\_.*
+    routes:
+        .svelte: kebab-case | regex:^(\_\_).*
 
 ignore:
   - .git
