--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@ls-lint/ls-lint": "^1.9.2",
     "@sveltejs/adapter-node": "next",
     "@sveltejs/kit": "next",
+    "@tsconfig/svelte": "^1.0.10",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "autoprefixer": "^10.2.5",
