build(MdsveX): 🔧 Improve config & support

--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "copy:fonts": "node \"./scripts/copyAssets.js\" fonts",
     "dev": "svelte-kit dev",
     "lint:commits": "commitlint --from \"develop\" --to \"HEAD\"",
-    "lint:css": "stylelint **/*.css **/*.svelte",
+    "lint:css": "stylelint **/*.css **/*.svelte, **/*.svx",
     "lint:ls": "ls-lint",
-    "lint:js": "eslint --ext \".js,.cjs,.ts,.svelte\" .",
+    "lint:js": "eslint --ext \".js,.cjs,.ts,.svelte,.svx\" .",
     "lint:md": "markdownlint **/*.md",
     "lint:svelte": "svelte-check; eslint --ext \".svelte\" .; stylelint **/*.svelte",
+    "lint:svx": "eslint --ext \".svx\" .; stylelint **/*.svx; markdownlint **/*.svx",
     "lint:staged": "lint-staged --verbose",
     "postinstall": "husky install",
     "preview": "svelte-kit preview"
@@ -70,11 +71,10 @@
     "postcss-preset-env": "^6.7.0",
     "postcss-reporter": "^7.0.2",
     "postcss-size": "^4.0.1",
-    "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "remark-autolink-headings": "^6.0.1",
-    "remark-slug": "^6.0.0",
-    "stylelint": "^13.12.0",
+    "rehype-autolink-headings": "^5.0.1",
+    "rehype-slug": "^4.0.1",
+    "remark-abbr": "^1.4.1",
+    "remark-github": "^10.0.1",
     "stylelint-8-point-grid": "^1.0.0",
     "stylelint-a11y": "^1.2.3",
     "stylelint-config-prettier": "^8.0.2",
