--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@sveltejs/adapter-node": "next",
     "@sveltejs/kit": "next",
     "@tsconfig/svelte": "^1.0.10",
+    "@types/nodemailer": "^6.4.1",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "autoprefixer": "^10.2.5",
@@ -64,6 +65,7 @@
     "markdownlint": "^0.23.1",
     "markdownlint-cli": "^0.27.1",
     "mdsvex": "^0.9.0",
+    "nodemailer": "^6.6.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.14",
     "postcss-cli": "^8.3.1",
