--- a/package.json
+++ b/package.json
@@ -37,20 +37,24 @@
     "preview": "svelte-kit preview"
   },
   "engines": {
-    "node": ">=15.0.0"
+    "node": ">=16.0.0"
   },
   "type": "module",
   "devDependencies": {
-    "@commitlint/config-conventional": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.4",
     "@iconify/svelte": "^1.0.4",
     "@ls-lint/ls-lint": "^1.9.2",
     "@sveltejs/adapter-node": "next",
+    "@sveltejs/adapter-static": "next",
+    "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
     "@tsconfig/svelte": "^1.0.10",
     "@types/nodemailer": "^6.4.1",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
     "autoprefixer": "^10.2.5",
+    "case": "^1.6.3",
+    "commitlint": "^12.1.4",
     "dotenv": "^9.0.2",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
@@ -58,31 +62,34 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-svelte3": "^3.1.2",
-    "fs-extra": "^9.1.0",
+    "fs-extra": "^10.0.0",
     "gacp": "^2.10.2",
-    "husky": "^5.1.3",
-    "lint-staged": "^10.5.4",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "markdownlint": "^0.23.1",
     "markdownlint-cli": "^0.27.1",
-    "mdsvex": "^0.9.0",
+    "mdsvex": "^0.9.6",
     "nodemailer": "^6.6.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.14",
+    "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
-    "postcss-mixins": "^7.0.3",
+    "postcss-mixins": "^8.0.0",
     "postcss-preset-env": "^6.7.0",
     "postcss-reporter": "^7.0.2",
     "postcss-size": "^4.0.1",
-    "rehype-autolink-headings": "^5.0.1",
+    "prettier": "^2.3.0",
+    "prettier-plugin-svelte": "^2.3.0",
+    "rehype-autolink-headings": "^5.1.0",
     "rehype-slug": "^4.0.1",
     "remark-abbr": "^1.4.1",
-    "remark-github": "^10.0.1",
+    "remark-github": "^10.1.0",
+    "stylelint": "^13.13.1",
     "stylelint-8-point-grid": "^1.0.0",
     "stylelint-a11y": "^1.2.3",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended": "^5.0.0",
-    "stylelint-declaration-use-variable": "^1.7.2",
+    "stylelint-declaration-use-variable": "^1.7.3",
     "svelte": "^3.38.2",
     "svelte-check": "^1.5.4",
     "svelte-inline-svg": "^1.0.8",
@@ -92,7 +99,7 @@
   },
   "dependencies": {
     "@iconify-icons/carbon": "^1.1.3",
-    "@iconify-icons/simple-icons": "^1.1.19",
+    "@iconify-icons/simple-icons": "^1.1.25",
     "@iconify-icons/twemoji": "^1.1.1",
     "@xeho91/avatar": "github:xeho91/avatar#main",
     "@xeho91/colors": "github:xeho91/colors#main",
