--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "copy:fonts": "node \"./scripts/copyAssets.js\" fonts",
     "dev": "svelte-kit dev",
     "lint:commits": "commitlint --from \"develop\" --to \"HEAD\"",
-    "lint:css": "stylelint **/*.css **/*.svelte, **/*.svx",
+    "lint:css": "stylelint **/*.{css,svelte,svx}",
     "lint:ls": "ls-lint",
     "lint:js": "eslint --ext \".js,.cjs,.ts,.svelte,.svx\" .",
     "lint:md": "markdownlint **/*.md",
