--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "build": "svelte-kit build",
-    "commit": "gacp --no-add",
+    "commit": "gacp --emoji emoji --no-add --no-push",
     "copy-assets": "run-p copy:*",
     "copy:favicon": "node \"./scripts/copyAssets.js\" favicon",
     "copy:logo": "node \"./scripts/copyAssets.js\" logo",
@@ -33,8 +33,8 @@
     "lint:svelte": "svelte-check; eslint --ext \".svelte\" .; stylelint **/*.svelte",
     "lint:svx": "eslint --ext \".svx\" .; stylelint **/*.svx; markdownlint **/*.svx",
     "lint:staged": "lint-staged --verbose",
-    "postinstall": "husky install",
-    "preview": "svelte-kit preview"
+    "preview": "svelte-kit preview",
+    "prepare": "husky install"
   },
   "engines": {
     "node": ">=16.0.0"
