--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-svelte3": "^3.2.0",
     "fs-extra": "^10.0.0",
     "gacp": "^2.10.2",
+    "html-to-text": "^7.1.1",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "markdownlint": "^0.23.1",
