--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "case": "^1.6.3",
     "cl-editor": "^2.2.1",
     "normalize.css": "^8.0.1",
-    "svelte-inline-svg": "^1.0.8"
+    "svelte-inline-svg": "^1.0.8",
+    "svelte-notifications": "^0.9.91"
   }
 }
